Fix project cards alignment issue

--- a/style.css
+++ b/style.css
@@ -202,19 +202,19 @@ html, body {
 
 .projects-container {
     grid-row: span 2;
+}
+
+.card-grid {
     display: grid;
     gap: 20px;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     overflow: auto;
-    justify-content: center;
+    align-items: start;
+    padding-top: 20px;
 }
 
 .projects-container * {
     margin: 0;
-}
-
-.projects-container h2 {
-    grid-column: 1 / -1;
 }
 
 .projects-container .card {
@@ -223,8 +223,9 @@ html, body {
     height: 200px;
     padding: 10px;
     border-radius: 10px;
-    box-shadow: 1px 1px 10px gray;
     color: darkslategray;
+    box-shadow: 1px 1px 5px gray;
+    margin: 5px;
 }
 
 .projects-container .card p.title {
